Bug 418604 - If the currently applied Colour Scheme is not found, Apply is never enabled when selecting other colour schemes
Summary: If the currently applied Colour Scheme is not found, Apply is never enabled w...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.17.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-08 02:04 UTC by The Feren OS Dev
Modified: 2020-04-02 15:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description The Feren OS Dev 2020-03-08 02:04:47 UTC
SUMMARY
If the currently applied colour scheme is not found, resulting in a warning appearing at the top of the module that it picked the default colour scheme automatically, the 'Apply' button will never be enabled when picking other colour schemes which means no other colour schemes can be applied.

STEPS TO REPRODUCE
1. Manually set the colour scheme value to an non-existent colour scheme name, or apply a custom colour scheme but then remove it after that
2. Open the Colours KCM once more
3. Select a different colour scheme

OBSERVED RESULT
The KCM never thinks you need to apply unsaved changes, meaning you can't apply any other colour scheme via the KCM.

EXPECTED RESULT
You can apply other colour schemes normally via the KCM.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE neon 5.18.2
(available in About System)
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
This is basically like the Fonts KCM issue from 5.18.0 except it's way less widespread since it only happens if the current colour scheme can't be found.
Comment 1 The Feren OS Dev 2020-03-08 02:06:22 UTC
Extra additional information: Double-clicking colour schemes to apply them still works.
Comment 2 Cyril Rossi 2020-03-09 14:43:01 UTC
https://phabricator.kde.org/D27944
Comment 3 Cyril Rossi 2020-03-19 09:50:54 UTC
Git commit 4d33b8276e00471f6bfc14a174b3a33fe17627b3 by Cyril Rossi.
Committed on 19/03/2020 at 09:47.
Pushed by crossi into branch 'master'.

KCM Colors fix apply button always disabled

Summary:

This is similar to D27384

Test Plan:
In `kdeglobals` configuration file :

* Edit `ColorScheme` in group `General` to a non existing value
* Open the KCM, the default color scheme is selected with a warning message,
* Select a different scheme, the apply button stay disabled forever.

Reviewers: #plasma, ervin, bport, meven, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27944

M  +5    -0    kcms/colors/colors.cpp

https://commits.kde.org/plasma-desktop/4d33b8276e00471f6bfc14a174b3a33fe17627b3
Comment 4 Nate Graham 2020-03-19 13:25:15 UTC
Does this merge cleanly onto the stable branch? Might be nice to get it into 5.18.4 if possible for our LTS users.
Comment 5 Cyril Rossi 2020-03-19 14:27:59 UTC
Sure, I can cherry-pick the commit and merge into 5.18 branch.
Comment 6 Cyril Rossi 2020-04-02 13:20:19 UTC
Git commit 443b028a1cb344604751963770105903b0a9e391 by Cyril Rossi.
Committed on 02/04/2020 at 13:18.
Pushed by crossi into branch 'Plasma/5.18'.

KCM Colors fix apply button always disabled

Summary:

This is similar to D27384

Test Plan:
In `kdeglobals` configuration file :

* Edit `ColorScheme` in group `General` to a non existing value
* Open the KCM, the default color scheme is selected with a warning message,
* Select a different scheme, the apply button stay disabled forever.

Reviewers: #plasma, ervin, bport, meven, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27944

(cherry picked from commit 4d33b8276e00471f6bfc14a174b3a33fe17627b3)

M  +5    -0    kcms/colors/colors.cpp

https://commits.kde.org/plasma-desktop/443b028a1cb344604751963770105903b0a9e391