KCM Colors fix apply button always disabled

Summary:
BUG: 418604

This is similar to D27384

Test Plan:
In `kdeglobals` configuration file :

* Edit `ColorScheme` in group `General` to a non existing value
* Open the KCM, the default color scheme is selected with a warning message,
* Select a different scheme, the apply button stay disabled forever.

Reviewers: #plasma, ervin, bport, meven, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27944

(cherry picked from commit 4d33b8276e00471f6bfc14a174b3a33fe17627b3)